refactor Grammatical correction
Grammatically corrected the only line in the file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>studentsite</title>
 </head>
 <body>
-    hi! this is the first html file
+    Hi! this is the first html file.
 </body>
 </html>
